--- a/main.html
+++ b/main.html
@@ -18,7 +18,10 @@
 </head>
 
     <body>
-        <div id="main-container">
+        <div id="barchart">
+            <!-- Dynamic D3 content! -->
+        </div>
+        <div id="scatterplot">
             <!-- Dynamic D3 content! -->
         </div>
     </body>
