Add axes, random dataset and update buttons

--- a/main.html
+++ b/main.html
@@ -18,6 +18,10 @@
 </head>
 
     <body>
+        <div id="buttons">
+            <div id="update-barchart">Update Barchart</div>
+            <div id="update-scatterplot">Update Scatterplot</div>
+        </div>
         <div id="barchart">
             <!-- Dynamic D3 content! -->
         </div>
